verif correction et completude OK